--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.0",
     "socket.io-client": "^4.7.5",
+    "sonner": "^1.4.41",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
